ui - fix overflows on desktop

--- a/src/components/BlibliPDPRevampStoryBlock/BlibliPDPRevampStoryBlock.module.scss
+++ b/src/components/BlibliPDPRevampStoryBlock/BlibliPDPRevampStoryBlock.module.scss
@@ -3,5 +3,6 @@
   top: 0;
   background-color: #e7f7ff;
   height: 100%;
+  max-height: 100vh;
   will-change: transform, visibility, opacity;
 }
