--- a/src/components/BlibliPDPRevampViewBlock/BlibliPDPRevampViewBlock.module.scss
+++ b/src/components/BlibliPDPRevampViewBlock/BlibliPDPRevampViewBlock.module.scss
@@ -5,6 +5,7 @@
   background-color: var(--vscode-bg-dark);
   position: relative;
   will-change: transform, visibility, opacity;
+  min-height: 100vh;
 }
 
 .sidebar {
