--- a/src/pages/WorkHighlightPage/BlibliHighlights.module.scss
+++ b/src/pages/WorkHighlightPage/BlibliHighlights.module.scss
@@ -16,7 +16,7 @@
   text-align: center;
 
   @include responsive.desktop {
-    grid-template-columns: 50vw 50vw;
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
     grid-template-areas:
       'page-gap tech'
       'review-revamp review-revamp-story'
