--- a/src/pages/WorkPage/WorkPage.module.scss
+++ b/src/pages/WorkPage/WorkPage.module.scss
@@ -5,10 +5,9 @@
   top: 0;
   left: 0;
   display: grid;
-  width: 100vw;
+  width: 100%;
 
   @include responsive.desktop {
-    place-content: center;
     min-height: 100vh;
   }
 
@@ -17,7 +16,7 @@
     background-color: transparent;
     height: 80vh;
     @include responsive.desktop {
-      width: 50vw;
+      width: 50%;
     }
   }
 
